source/parser.output
State 101 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts
    2        | %empty

    3 stmt: expr SEMICOLON
    4     | ifstmt
    5     | whilestmt
    6     | forstmt
    7     | returnstmt
    8     | BREAK SEMICOLON
    9     | CONTINUE SEMICOLON
   10     | block
   11     | funcdef
   12     | SEMICOLON

   13 stmts: stmts stmt
   14      | stmt

   15 expr: lvalue ASSIGN expr

   16 $@1: %empty

   17 expr: expr OR $@1 M expr

   18 $@2: %empty

   19 expr: expr AND $@2 M expr

   20 $@3: %empty

   21 expr: expr NOT_EQUAL $@3 expr

   22 $@4: %empty

   23 expr: expr EQUAL $@4 expr
   24     | expr LESS_EQUAL expr
   25     | expr LESS expr
   26     | expr GREATER_EQUAL expr
   27     | expr GREATER expr
   28     | expr PLUS expr
   29     | expr MINUS expr
   30     | expr MUL expr
   31     | expr DIV expr
   32     | expr MODULO expr
   33     | LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
   34     | MINUS expr
   35     | NOT expr
   36     | PLUS_PLUS lvalue
   37     | lvalue PLUS_PLUS
   38     | MINUS_MINUS lvalue
   39     | lvalue MINUS_MINUS
   40     | primary

   41 primary: lvalue
   42        | call
   43        | objectdef
   44        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   45        | const

   46 lvalue: ID
   47       | LOCAL ID
   48       | DOUBLE_COLON ID
   49       | member

   50 member: lvalue FULLSTOP ID
   51       | lvalue LEFT_BRACKET expr RIGHT_BRACKET
   52       | call FULLSTOP ID
   53       | call LEFT_BRACKET expr RIGHT_BRACKET

   54 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   55     | call LEFT_PARENTHESIS RIGHT_PARENTHESIS
   56     | lvalue callsuffix
   57     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   58     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS RIGHT_PARENTHESIS

   59 callsuffix: normcall
   60           | methodcall

   61 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   62         | LEFT_PARENTHESIS RIGHT_PARENTHESIS

   63 methodcall: DOUBLE_FULLSTOP ID LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   64           | DOUBLE_FULLSTOP ID LEFT_PARENTHESIS RIGHT_PARENTHESIS

   65 elist: expr
   66      | elist COMMA expr

   67 objectdef: LEFT_BRACKET indexed RIGHT_BRACKET
   68          | LEFT_BRACKET elist RIGHT_BRACKET
   69          | LEFT_BRACKET RIGHT_BRACKET

   70 indexed: indexedelem
   71        | indexed COMMA indexedelem

   72 indexedelem: LEFT_BRACE expr COLON expr RIGHT_BRACE

   73 $@5: %empty

   74 block: LEFT_BRACE $@5 RIGHT_BRACE

   75 $@6: %empty

   76 block: LEFT_BRACE $@6 stmts RIGHT_BRACE

   77 funcname: ID
   78         | %empty

   79 funcprefix: FUNCTION funcname

   80 funcargs: LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS
   81         | LEFT_PARENTHESIS RIGHT_PARENTHESIS

   82 funcbody: block

   83 funcblockstart: %empty

   84 funcblockend: %empty

   85 funcdef: funcprefix M funcargs funcblockstart funcbody funcblockend

   86 const: INTEGER
   87      | REAL
   88      | STRING
   89      | NIL
   90      | TRUE
   91      | FALSE

   92 idlist: ID
   93       | idlist COMMA ID

   94 ifprefix: IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

   95 elseprefix: ELSE

   96 ifstmt: ifprefix stmt elseprefix stmt
   97       | ifprefix stmt

   98 loopstart: %empty

   99 loopend: %empty

  100 loopstmt: loopstart stmt loopend

  101 whilestart: WHILE

  102 whilecond: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

  103 whilestmt: whilestart whilecond loopstmt

  104 N: %empty

  105 M: %empty

  106 $@7: %empty

  107 forprefix: FOR LEFT_PARENTHESIS elist SEMICOLON M expr $@7 SEMICOLON

  108 $@8: %empty

  109 forprefix: FOR LEFT_PARENTHESIS SEMICOLON M expr $@8 SEMICOLON

  110 forstmt: forprefix N elist RIGHT_PARENTHESIS N loopstmt N
  111        | forprefix N RIGHT_PARENTHESIS N loopstmt N

  112 returnstmt: RETURN SEMICOLON
  113           | RETURN expr SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <int_value> (258) 86
    REAL <real_value> (259) 87
    ID <string_value> (260) 46 47 48 50 52 63 64 77 92 93
    STRING <string_value> (261) 88
    LEFT_BRACE (262) 72 74 76
    RIGHT_BRACE (263) 72 74 76
    LEFT_BRACKET (264) 51 53 67 68 69
    RIGHT_BRACKET (265) 51 53 67 68 69
    LEFT_PARENTHESIS (266) 33 44 54 55 57 58 61 62 63 64 80 81 94 102 107 109
    RIGHT_PARENTHESIS (267) 33 44 54 55 57 58 61 62 63 64 80 81 94 102 110 111
    SEMICOLON (268) 3 8 9 12 107 109 112 113
    COMMA (269) 66 71 93
    FULLSTOP (270) 50 52
    COLON (271) 72
    DOUBLE_FULLSTOP (272) 63 64
    DOUBLE_COLON (273) 48
    IF (274) 94
    ELSE (275) 95
    WHILE (276) 101
    FOR (277) 107 109
    FUNCTION (278) 79
    BREAK (279) 8
    CONTINUE (280) 9
    RETURN (281) 112 113
    AND (282) 19
    NOT (283) 35
    OR (284) 17
    LOCAL (285) 47
    TRUE (286) 90
    FALSE (287) 91
    NIL (288) 89
    ASSIGN (289) 15
    PLUS (290) 28
    MINUS (291) 29 34
    MUL (292) 30
    DIV (293) 31
    MODULO (294) 32
    EQUAL (295) 23
    NOT_EQUAL (296) 21
    PLUS_PLUS (297) 36 37
    MINUS_MINUS (298) 38 39
    GREATER (299) 27
    GREATER_EQUAL (300) 26
    LESS (301) 25
    LESS_EQUAL (302) 24
    UMINUS (303)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1 2
        on right: 0
    stmt <st> (51)
        on left: 3 4 5 6 7 8 9 10 11 12
        on right: 13 14 96 97 100
    stmts <st> (52)
        on left: 13 14
        on right: 1 13 76
    expr <exprVal> (53)
        on left: 15 17 19 21 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 3 15 17 19 21 23 24 25 26 27 28 29 30 31 32 33 34 35 51 53 65 66 72 94 102 107 109 113
    $@1 (54)
        on left: 16
        on right: 17
    $@2 (55)
        on left: 18
        on right: 19
    $@3 (56)
        on left: 20
        on right: 21
    $@4 (57)
        on left: 22
        on right: 23
    primary <exprVal> (58)
        on left: 41 42 43 44 45
        on right: 40
    lvalue <exprVal> (59)
        on left: 46 47 48 49
        on right: 15 36 37 38 39 41 50 51 56
    member <exprVal> (60)
        on left: 50 51 52 53
        on right: 49
    call <exprVal> (61)
        on left: 54 55 56 57 58
        on right: 42 52 53 54 55
    callsuffix <callFunc> (62)
        on left: 59 60
        on right: 56
    normcall <callFunc> (63)
        on left: 61 62
        on right: 59
    methodcall <callFunc> (64)
        on left: 63 64
        on right: 60
    elist <exprVal> (65)
        on left: 65 66
        on right: 54 57 61 63 66 68 107 110
    objectdef <exprVal> (66)
        on left: 67 68 69
        on right: 43
    indexed <indPair> (67)
        on left: 70 71
        on right: 67 71
    indexedelem <indPair> (68)
        on left: 72
        on right: 70 71
    block <st> (69)
        on left: 74 76
        on right: 10 82
    $@5 (70)
        on left: 73
        on right: 74
    $@6 (71)
        on left: 75
        on right: 76
    funcname <string_value> (72)
        on left: 77 78
        on right: 79
    funcprefix <symTabEntry> (73)
        on left: 79
        on right: 85
    funcargs (74)
        on left: 80 81
        on right: 85
    funcbody <un_value> (75)
        on left: 82
        on right: 85
    funcblockstart (76)
        on left: 83
        on right: 85
    funcblockend (77)
        on left: 84
        on right: 85
    funcdef <symTabEntry> (78)
        on left: 85
        on right: 11 44 57 58
    const <exprVal> (79)
        on left: 86 87 88 89 90 91
        on right: 45
    idlist (80)
        on left: 92 93
        on right: 80 93
    ifprefix <un_value> (81)
        on left: 94
        on right: 96 97
    elseprefix <un_value> (82)
        on left: 95
        on right: 96
    ifstmt <st> (83)
        on left: 96 97
        on right: 4
    loopstart (84)
        on left: 98
        on right: 100
    loopend (85)
        on left: 99
        on right: 100
    loopstmt <st> (86)
        on left: 100
        on right: 103 110 111
    whilestart <un_value> (87)
        on left: 101
        on right: 103
    whilecond <un_value> (88)
        on left: 102
        on right: 103
    whilestmt (89)
        on left: 103
        on right: 5
    N <un_value> (90)
        on left: 104
        on right: 110 111
    M <un_value> (91)
        on left: 105
        on right: 17 19 85 107 109
    forprefix <forPrefJumps> (92)
        on left: 107 109
        on right: 110 111
    $@7 (93)
        on left: 106
        on right: 107
    $@8 (94)
        on left: 108
        on right: 109
    forstmt (95)
        on left: 110 111
        on right: 6
    returnstmt (96)
        on left: 112 113
        on right: 7


State 0

    0 $accept: . program $end

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACE        shift, and go to state 5
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    SEMICOLON         shift, and go to state 8
    DOUBLE_COLON      shift, and go to state 9
    IF                shift, and go to state 10
    WHILE             shift, and go to state 11
    FOR               shift, and go to state 12
    FUNCTION          shift, and go to state 13
    BREAK             shift, and go to state 14
    CONTINUE          shift, and go to state 15
    RETURN            shift, and go to state 16
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    $default  reduce using rule 2 (program)

    program     go to state 25
    stmt        go to state 26
    stmts       go to state 27
    expr        go to state 28
    primary     go to state 29
    lvalue      go to state 30
    member      go to state 31
    call        go to state 32
    objectdef   go to state 33
    block       go to state 34
    funcprefix  go to state 35
    funcdef     go to state 36
    const       go to state 37
    ifprefix    go to state 38
    ifstmt      go to state 39
    whilestart  go to state 40
    whilestmt   go to state 41
    forprefix   go to state 42
    forstmt     go to state 43
    returnstmt  go to state 44


State 1

   86 const: INTEGER .

    $default  reduce using rule 86 (const)


State 2

   87 const: REAL .

    $default  reduce using rule 87 (const)


State 3

   46 lvalue: ID .

    $default  reduce using rule 46 (lvalue)


State 4

   88 const: STRING .

    $default  reduce using rule 88 (const)


State 5

   74 block: LEFT_BRACE . $@5 RIGHT_BRACE
   76      | LEFT_BRACE . $@6 stmts RIGHT_BRACE

    RIGHT_BRACE  reduce using rule 73 ($@5)
    $default     reduce using rule 75 ($@6)

    $@5  go to state 45
    $@6  go to state 46


State 6

   67 objectdef: LEFT_BRACKET . indexed RIGHT_BRACKET
   68          | LEFT_BRACKET . elist RIGHT_BRACKET
   69          | LEFT_BRACKET . RIGHT_BRACKET

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACE        shift, and go to state 47
    LEFT_BRACKET      shift, and go to state 6
    RIGHT_BRACKET     shift, and go to state 48
    LEFT_PARENTHESIS  shift, and go to state 7
    DOUBLE_COLON      shift, and go to state 9
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    expr         go to state 49
    primary      go to state 29
    lvalue       go to state 30
    member       go to state 31
    call         go to state 32
    elist        go to state 50
    objectdef    go to state 33
    indexed      go to state 51
    indexedelem  go to state 52
    const        go to state 37


State 7

   33 expr: LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS
   44 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   57 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   58     | LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS RIGHT_PARENTHESIS

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    DOUBLE_COLON      shift, and go to state 9
    FUNCTION          shift, and go to state 13
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    expr        go to state 53
    primary     go to state 29
    lvalue      go to state 30
    member      go to state 31
    call        go to state 32
    objectdef   go to state 33
    funcprefix  go to state 35
    funcdef     go to state 54
    const       go to state 37


State 8

   12 stmt: SEMICOLON .

    $default  reduce using rule 12 (stmt)


State 9

   48 lvalue: DOUBLE_COLON . ID

    ID  shift, and go to state 55


State 10

   94 ifprefix: IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 56


State 11

  101 whilestart: WHILE .

    $default  reduce using rule 101 (whilestart)


State 12

  107 forprefix: FOR . LEFT_PARENTHESIS elist SEMICOLON M expr $@7 SEMICOLON
  109          | FOR . LEFT_PARENTHESIS SEMICOLON M expr $@8 SEMICOLON

    LEFT_PARENTHESIS  shift, and go to state 57


State 13

   79 funcprefix: FUNCTION . funcname

    ID  shift, and go to state 58

    $default  reduce using rule 78 (funcname)

    funcname  go to state 59


State 14

    8 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 60


State 15

    9 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 61


State 16

  112 returnstmt: RETURN . SEMICOLON
  113           | RETURN . expr SEMICOLON

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    SEMICOLON         shift, and go to state 62
    DOUBLE_COLON      shift, and go to state 9
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    expr       go to state 63
    primary    go to state 29
    lvalue     go to state 30
    member     go to state 31
    call       go to state 32
    objectdef  go to state 33
    const      go to state 37


State 17

   35 expr: NOT . expr

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    DOUBLE_COLON      shift, and go to state 9
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    expr       go to state 64
    primary    go to state 29
    lvalue     go to state 30
    member     go to state 31
    call       go to state 32
    objectdef  go to state 33
    const      go to state 37


State 18

   47 lvalue: LOCAL . ID

    ID  shift, and go to state 65


State 19

   90 const: TRUE .

    $default  reduce using rule 90 (const)


State 20

   91 const: FALSE .

    $default  reduce using rule 91 (const)


State 21

   89 const: NIL .

    $default  reduce using rule 89 (const)


State 22

   34 expr: MINUS . expr

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    DOUBLE_COLON      shift, and go to state 9
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    expr       go to state 66
    primary    go to state 29
    lvalue     go to state 30
    member     go to state 31
    call       go to state 32
    objectdef  go to state 33
    const      go to state 37


State 23

   36 expr: PLUS_PLUS . lvalue

    ID                shift, and go to state 3
    LEFT_PARENTHESIS  shift, and go to state 67
    DOUBLE_COLON      shift, and go to state 9
    LOCAL             shift, and go to state 18

    lvalue  go to state 68
    member  go to state 31
    call    go to state 69


State 24

   38 expr: MINUS_MINUS . lvalue

    ID                shift, and go to state 3
    LEFT_PARENTHESIS  shift, and go to state 67
    DOUBLE_COLON      shift, and go to state 9
    LOCAL             shift, and go to state 18

    lvalue  go to state 70
    member  go to state 31
    call    go to state 69


State 25

    0 $accept: program . $end

    $end  shift, and go to state 71


State 26

   14 stmts: stmt .

    $default  reduce using rule 14 (stmts)


State 27

    1 program: stmts .
   13 stmts: stmts . stmt

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACE        shift, and go to state 5
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    SEMICOLON         shift, and go to state 8
    DOUBLE_COLON      shift, and go to state 9
    IF                shift, and go to state 10
    WHILE             shift, and go to state 11
    FOR               shift, and go to state 12
    FUNCTION          shift, and go to state 13
    BREAK             shift, and go to state 14
    CONTINUE          shift, and go to state 15
    RETURN            shift, and go to state 16
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    $default  reduce using rule 1 (program)

    stmt        go to state 72
    expr        go to state 28
    primary     go to state 29
    lvalue      go to state 30
    member      go to state 31
    call        go to state 32
    objectdef   go to state 33
    block       go to state 34
    funcprefix  go to state 35
    funcdef     go to state 36
    const       go to state 37
    ifprefix    go to state 38
    ifstmt      go to state 39
    whilestart  go to state 40
    whilestmt   go to state 41
    forprefix   go to state 42
    forstmt     go to state 43
    returnstmt  go to state 44


State 28

    3 stmt: expr . SEMICOLON
   17 expr: expr . OR $@1 M expr
   19     | expr . AND $@2 M expr
   21     | expr . NOT_EQUAL $@3 expr
   23     | expr . EQUAL $@4 expr
   24     | expr . LESS_EQUAL expr
   25     | expr . LESS expr
   26     | expr . GREATER_EQUAL expr
   27     | expr . GREATER expr
   28     | expr . PLUS expr
   29     | expr . MINUS expr
   30     | expr . MUL expr
   31     | expr . DIV expr
   32     | expr . MODULO expr

    SEMICOLON      shift, and go to state 73
    AND            shift, and go to state 74
    OR             shift, and go to state 75
    PLUS           shift, and go to state 76
    MINUS          shift, and go to state 77
    MUL            shift, and go to state 78
    DIV            shift, and go to state 79
    MODULO         shift, and go to state 80
    EQUAL          shift, and go to state 81
    NOT_EQUAL      shift, and go to state 82
    GREATER        shift, and go to state 83
    GREATER_EQUAL  shift, and go to state 84
    LESS           shift, and go to state 85
    LESS_EQUAL     shift, and go to state 86


State 29

   40 expr: primary .

    $default  reduce using rule 40 (expr)


State 30

   15 expr: lvalue . ASSIGN expr
   37     | lvalue . PLUS_PLUS
   39     | lvalue . MINUS_MINUS
   41 primary: lvalue .
   50 member: lvalue . FULLSTOP ID
   51       | lvalue . LEFT_BRACKET expr RIGHT_BRACKET
   56 call: lvalue . callsuffix

    LEFT_BRACKET      shift, and go to state 87
    LEFT_PARENTHESIS  shift, and go to state 88
    FULLSTOP          shift, and go to state 89
    DOUBLE_FULLSTOP   shift, and go to state 90
    ASSIGN            shift, and go to state 91
    PLUS_PLUS         shift, and go to state 92
    MINUS_MINUS       shift, and go to state 93

    $default  reduce using rule 41 (primary)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 31

   49 lvalue: member .

    $default  reduce using rule 49 (lvalue)


State 32

   42 primary: call .
   52 member: call . FULLSTOP ID
   53       | call . LEFT_BRACKET expr RIGHT_BRACKET
   54 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   55     | call . LEFT_PARENTHESIS RIGHT_PARENTHESIS

    LEFT_BRACKET      shift, and go to state 97
    LEFT_PARENTHESIS  shift, and go to state 98
    FULLSTOP          shift, and go to state 99

    $default  reduce using rule 42 (primary)


State 33

   43 primary: objectdef .

    $default  reduce using rule 43 (primary)


State 34

   10 stmt: block .

    $default  reduce using rule 10 (stmt)


State 35

   85 funcdef: funcprefix . M funcargs funcblockstart funcbody funcblockend

    $default  reduce using rule 105 (M)

    M  go to state 100


State 36

   11 stmt: funcdef .

    $default  reduce using rule 11 (stmt)


State 37

   45 primary: const .

    $default  reduce using rule 45 (primary)


State 38

   96 ifstmt: ifprefix . stmt elseprefix stmt
   97       | ifprefix . stmt

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACE        shift, and go to state 5
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    SEMICOLON         shift, and go to state 8
    DOUBLE_COLON      shift, and go to state 9
    IF                shift, and go to state 10
    WHILE             shift, and go to state 11
    FOR               shift, and go to state 12
    FUNCTION          shift, and go to state 13
    BREAK             shift, and go to state 14
    CONTINUE          shift, and go to state 15
    RETURN            shift, and go to state 16
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    stmt        go to state 101
    expr        go to state 28
    primary     go to state 29
    lvalue      go to state 30
    member      go to state 31
    call        go to state 32
    objectdef   go to state 33
    block       go to state 34
    funcprefix  go to state 35
    funcdef     go to state 36
    const       go to state 37
    ifprefix    go to state 38
    ifstmt      go to state 39
    whilestart  go to state 40
    whilestmt   go to state 41
    forprefix   go to state 42
    forstmt     go to state 43
    returnstmt  go to state 44


State 39

    4 stmt: ifstmt .

    $default  reduce using rule 4 (stmt)


State 40

  103 whilestmt: whilestart . whilecond loopstmt

    LEFT_PARENTHESIS  shift, and go to state 102

    whilecond  go to state 103


State 41

    5 stmt: whilestmt .

    $default  reduce using rule 5 (stmt)


State 42

  110 forstmt: forprefix . N elist RIGHT_PARENTHESIS N loopstmt N
  111        | forprefix . N RIGHT_PARENTHESIS N loopstmt N

    $default  reduce using rule 104 (N)

    N  go to state 104


State 43

    6 stmt: forstmt .

    $default  reduce using rule 6 (stmt)


State 44

    7 stmt: returnstmt .

    $default  reduce using rule 7 (stmt)


State 45

   74 block: LEFT_BRACE $@5 . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 105


State 46

   76 block: LEFT_BRACE $@6 . stmts RIGHT_BRACE

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACE        shift, and go to state 5
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    SEMICOLON         shift, and go to state 8
    DOUBLE_COLON      shift, and go to state 9
    IF                shift, and go to state 10
    WHILE             shift, and go to state 11
    FOR               shift, and go to state 12
    FUNCTION          shift, and go to state 13
    BREAK             shift, and go to state 14
    CONTINUE          shift, and go to state 15
    RETURN            shift, and go to state 16
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    stmt        go to state 26
    stmts       go to state 106
    expr        go to state 28
    primary     go to state 29
    lvalue      go to state 30
    member      go to state 31
    call        go to state 32
    objectdef   go to state 33
    block       go to state 34
    funcprefix  go to state 35
    funcdef     go to state 36
    const       go to state 37
    ifprefix    go to state 38
    ifstmt      go to state 39
    whilestart  go to state 40
    whilestmt   go to state 41
    forprefix   go to state 42
    forstmt     go to state 43
    returnstmt  go to state 44


State 47

   72 indexedelem: LEFT_BRACE . expr COLON expr RIGHT_BRACE

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    DOUBLE_COLON      shift, and go to state 9
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    expr       go to state 107
    primary    go to state 29
    lvalue     go to state 30
    member     go to state 31
    call       go to state 32
    objectdef  go to state 33
    const      go to state 37


State 48

   69 objectdef: LEFT_BRACKET RIGHT_BRACKET .

    $default  reduce using rule 69 (objectdef)


State 49

   17 expr: expr . OR $@1 M expr
   19     | expr . AND $@2 M expr
   21     | expr . NOT_EQUAL $@3 expr
   23     | expr . EQUAL $@4 expr
   24     | expr . LESS_EQUAL expr
   25     | expr . LESS expr
   26     | expr . GREATER_EQUAL expr
   27     | expr . GREATER expr
   28     | expr . PLUS expr
   29     | expr . MINUS expr
   30     | expr . MUL expr
   31     | expr . DIV expr
   32     | expr . MODULO expr
   65 elist: expr .

    AND            shift, and go to state 74
    OR             shift, and go to state 75
    PLUS           shift, and go to state 76
    MINUS          shift, and go to state 77
    MUL            shift, and go to state 78
    DIV            shift, and go to state 79
    MODULO         shift, and go to state 80
    EQUAL          shift, and go to state 81
    NOT_EQUAL      shift, and go to state 82
    GREATER        shift, and go to state 83
    GREATER_EQUAL  shift, and go to state 84
    LESS           shift, and go to state 85
    LESS_EQUAL     shift, and go to state 86

    $default  reduce using rule 65 (elist)


State 50

   66 elist: elist . COMMA expr
   68 objectdef: LEFT_BRACKET elist . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 108
    COMMA          shift, and go to state 109


State 51

   67 objectdef: LEFT_BRACKET indexed . RIGHT_BRACKET
   71 indexed: indexed . COMMA indexedelem

    RIGHT_BRACKET  shift, and go to state 110
    COMMA          shift, and go to state 111


State 52

   70 indexed: indexedelem .

    $default  reduce using rule 70 (indexed)


State 53

   17 expr: expr . OR $@1 M expr
   19     | expr . AND $@2 M expr
   21     | expr . NOT_EQUAL $@3 expr
   23     | expr . EQUAL $@4 expr
   24     | expr . LESS_EQUAL expr
   25     | expr . LESS expr
   26     | expr . GREATER_EQUAL expr
   27     | expr . GREATER expr
   28     | expr . PLUS expr
   29     | expr . MINUS expr
   30     | expr . MUL expr
   31     | expr . DIV expr
   32     | expr . MODULO expr
   33     | LEFT_PARENTHESIS expr . RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 112
    AND                shift, and go to state 74
    OR                 shift, and go to state 75
    PLUS               shift, and go to state 76
    MINUS              shift, and go to state 77
    MUL                shift, and go to state 78
    DIV                shift, and go to state 79
    MODULO             shift, and go to state 80
    EQUAL              shift, and go to state 81
    NOT_EQUAL          shift, and go to state 82
    GREATER            shift, and go to state 83
    GREATER_EQUAL      shift, and go to state 84
    LESS               shift, and go to state 85
    LESS_EQUAL         shift, and go to state 86


State 54

   44 primary: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS
   57 call: LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   58     | LEFT_PARENTHESIS funcdef . RIGHT_PARENTHESIS LEFT_PARENTHESIS RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 113


State 55

   48 lvalue: DOUBLE_COLON ID .

    $default  reduce using rule 48 (lvalue)


State 56

   94 ifprefix: IF LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    DOUBLE_COLON      shift, and go to state 9
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    expr       go to state 114
    primary    go to state 29
    lvalue     go to state 30
    member     go to state 31
    call       go to state 32
    objectdef  go to state 33
    const      go to state 37


State 57

  107 forprefix: FOR LEFT_PARENTHESIS . elist SEMICOLON M expr $@7 SEMICOLON
  109          | FOR LEFT_PARENTHESIS . SEMICOLON M expr $@8 SEMICOLON

    INTEGER           shift, and go to state 1
    REAL              shift, and go to state 2
    ID                shift, and go to state 3
    STRING            shift, and go to state 4
    LEFT_BRACKET      shift, and go to state 6
    LEFT_PARENTHESIS  shift, and go to state 7
    SEMICOLON         shift, and go to state 115
    DOUBLE_COLON      shift, and go to state 9
    NOT               shift, and go to state 17
    LOCAL             shift, and go to state 18
    TRUE              shift, and go to state 19
    FALSE             shift, and go to state 20
    NIL               shift, and go to state 21
    MINUS             shift, and go to state 22
    PLUS_PLUS         shift, and go to state 23
    MINUS_MINUS       shift, and go to state 24

    expr       go to state 49
    primary    go to state 29
    lvalue     go to state 30
    member     go to state 31
    call       go to state 32
    elist      go to state 116
    objectdef  go to state 33
    const      go to state 37


State 58
